Tutorial-GRMHD_UnitConversion: small tweaks. turns out rho is actually the total mass-energy density; gotta fix that.

--- a/Tutorial-GRMHD_UnitConversion.ipynb
+++ b/Tutorial-GRMHD_UnitConversion.ipynb
@@ -143,7 +143,7 @@
     "t_0 &=& \\frac{GM_0}{c^3} \\\\\n",
     "\\rho_0 &=& \\frac{M_0}{r_0^3} = \\frac{c^6}{G^3 M_0^2} = 6.17\\times 10^{17}\\left(\\frac {M_0} {1 M_{\\odot}}\\right)^{-2}\n",
     "\\end{eqnarray}\n",
-    "In this case we can define $\\rhoCode = \\rho/\\rho_0$, $\\rCode = r/r_0$, $t_0 = t/t_0$. The only remaining thing to do is to define $\\PCode$.  Lets define \n",
+    "In this case we can define $\\rhoCode = \\rho/\\rho_0$, $\\rCode = r/r_0$, $t_0 = t/t_0$. The only remaining thing to do is to define $\\PCode$.  Lets define $P_0'$ to be the pressure in dimensionful units at $\\rho_0$ (density in units of $1/M_0^2$):\n",
     "\\begin{equation}\n",
     "P = P_0'\\rhoCode^{1+1/n} \\rightarrow P_0' = K\\rho_0^{1+1/n},\n",
     "\\end{equation}\n",
@@ -176,11 +176,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## metric for ToV equation\n",
+    "## metric for TOV equation\n",
     "\n",
     "The metric for the TOV equation (taken) from wikipedia is\n",
     "\\begin{equation}\n",
-    "ds^2 = c^2 \\exp(\\nu) dt^2 - \\left(1 - \\frac{2GM}{rc^2}\\right)^{-1} dr^2 + r^2 d\\Omega^2\n",
+    "ds^2 = - c^2 e^\\nu dt^2 + \\left(1 - \\frac{2GM}{rc^2}\\right)^{-1} dr^2 + r^2 d\\Omega^2\n",
     "\\end{equation}\n",
     "where $M$ is defined as above, the mass as measured by a distant observer.  The equation for $\\nu$ is\n",
     "\\begin{equation}\n",
@@ -188,7 +188,7 @@
     "\\end{equation}\n",
     "with the boundary condition\n",
     "\\begin{equation}\n",
-    "\\exp(\\nu) = \\left(1-\\frac {2GM}{rc^2}\\right)\n",
+    "\\exp(\\nu) = \\left(1-\\frac {2Gm(R)}{Rc^2}\\right)\n",
     "\\end{equation}\n",
     "\n",
     "Lets write this in dimensionless units:\n",
@@ -222,30 +222,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAZEAAAD8CAYAAAC2PJlnAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAAIABJREFUeJzt3Xd4lfX9//Hnm4QQ9t5hg2FDICwt\nblvEQaVqtajIFPp1trVFa6t+20p/2tql1ToAERSBasWJVqu2ioywh2xIwoZACIGQcd7fP5L2RyMj\nCST3OSevx3VxkXNyn/u87ivhvLjH53ObuyMiIlIWVYIOICIikUslIiIiZaYSERGRMlOJiIhImalE\nRESkzFQiIiJSZioREREpM5WIiIiUmUpERETKLDboAOWtUaNG3rZt26BjiIhElJSUlP3u3vhMy0V9\nibRt25YlS5YEHUNEJKKY2faSLKfDWSIiUmYqERERKTOViIiIlJlKREREykwlIiIiZaYSERGRMlOJ\niIhImalERESizKa9WUx+bx0VcfvzqB9sKCJSWeTmh3j208089fEmqsfFMKJ/G1o3rFGu76kSERGJ\nAstSDzLpr6tYvyeLq3s25+FrutG4drVyf1+ViIhIBDuam88T89cz7YttNKsTzwu3JXN516YV9v4q\nERGRCLVwywHun7uS1Iyj3DqwDT8ekkjt+KoVmkElIiISYY7lFvD4/K+Y9sU2WtWvwWvjBzKgfcNA\nsqhEREQiyJJtGdw/dyVb92czclAbfnJlZ2rEBfdRrhIREYkAOXkF/PaD9bzwr620rFedV8YN4PwO\njYKOpRIREQl3y1IP8qM5K9i8L5sRA1rzwNAu1KoWHh/f4ZFCRES+Jr8gxB8/3sRTH2+kWZ14Xh7T\nn8GdznizwQqlEhERCUPb9mdz72vLWZ52iOF9WvLItd2oU8FXXpWESkREJIy4O3NS0nlk3hpiqxhP\nfS+Jq3u2CDrWKalERETCxMHsXB58YxXvrd7NwPYNePLG3rSoVz3oWKelEhERCQOfb9rPD2YvJyM7\nl0lXdmbc4PbEVLGgY52RSkREJEC5+SF+88F6nvtsC+0b1+TFkf3o3rJu0LFKTCUiIhKQ1ANHuevV\npaxIz2TEgNY8dFVXqsfFBB2rVFQiIiIBeHfVLn4ydyUYPHtLH4Z0bx50pDJRiYiIVKCcvAJ+9c46\nXv5yO71a1eOpm5No1aB87/lRnlQiIiIVZOv+bP5n5lLW7jrMuMHtuP9bnYmLjewbzEZkiZhZe+Cn\nQF13vz7oPCIiZ/Lm8h08+PoqqsZWqfB7fpSnM1agmSWa2fIT/hw2s3vL8mZmNsXM9prZ6pN8b4iZ\nrTezTWY26XTrcfct7j6mLBlERCpSTl4Bk/66kntmLadL8zq8e/fgqCkQKMGeiLuvB3oDmFkMsAN4\n48RlzKwJcMzds054rqO7byq2umnAU8D0Yq+PAZ4GrgDSgcVmNg+IASYXW8dod997xi0TEQlY6oGj\nTJiRwtpdh/n+xR2474rzqBoT2Yeviivt4azLgM3uvr3Y8xcBE81sqLvnmNk44Dpg6IkLuftnZtb2\nJOvtD2xy9y0AZjYLGObuk4GrS5lRRCRwH63bw32vLQdg6u39uKRzk4ATlY/SVuJNwKvFn3T3OcD7\nwCwzGwGMBm4sxXpbAmknPE4veu6kzKyhmT0LJJnZA6dY5hozey4zM7MUMUREzk5ByPntB+sZ89IS\nEurX4O27BkdtgUAp9kTMLA64Fjjph7a7P160B/EM0MHdj5Qix8nG9vupFnb3A8CE063Q3d8C3kpO\nTh5XihwiImWWkZ3LPbOW8c+N+7mhbwK/+HZ34qtG1uDB0irN4awrgaXuvudk3zSzwUB3Cs+XPAzc\nWYp1pwOtTnicAOwsxetFRAK1Iu0Q35+5lH1Zx5k8vAc39WuFWfjPfXW2SnM462ZOcigLwMySgOeB\nYcAooIGZ/bIU614MdDKzdkV7PDcB80rxehGRQLg7Mxdu54ZnFwAwd+Igbu7fulIUCJSwRMysBoVX\nTr1+ikVqADe4+2Z3DwEjgeIn3zGzV4EFQKKZpZvZGAB3z6dwz2U+sA6Y7e5rSrsxIiIVKSevgB/P\nXclP31jNwA4Nefuub9AzoV7QsSqUuZ/y1ENUSE5O9iVLlgQdQ0SizJ7DOYx/OYUVaYe4+9KO3HP5\neRExdXtJmVmKuyefabmIHLEuIhKklO0HmTAjhezj+RE9eeK5oBIRESmF2YvTeOhvq2lWN54ZYwaQ\n2Kx20JECpRIRESmBvIIQv3x7LS8t2M7gTo34081J1KsRF3SswKlERETOICM7l+/PTOHLLRmM/UY7\nJl3Zmdgom76krFQiIiKnsWZnJuOnp7DvyHGevLEXw/skBB0prKhERERO4e2VO/nRnBXUqx7HnDsG\n0atV5bp8tyRUIiIixbg7f/hoI7//+0b6tqnPM7f0oUnt+KBjhSWViIjICXLyCrh/7kreWrGT7/RJ\n4LHh3akWG93zX50NlYiISJG9WTmMn57C8rRD/GRIZyZc1L7STF9SVioRERFg3a7DjJm2mINH83j2\nlr4M6d4s6EgRQSUiIpXe39fu4e5Zy6gdH8ucCYPo3rJu0JEihkpERCotd+eFf27lsffW0b1FXV4Y\nmUzTOjqBXhoqERGplHLzQ/zsb6t5bUkaQ3s047c39KZ6nE6gl5ZKREQqnUNHc5kwo3AE+p2XdOQH\nV5xHlSiagbciqUREpFLZtj+bUdMWs+PgMY1APwdUIiJSaaRsP8i46UsK70Y4bgD92jYIOlLEU4mI\nSKXw3qpd3PvacprVjWfaqP60a1Qz6EhRQSUiIlHtxCuwklrV4/nbkmlYq1rQsaKGSkREolZByHn0\nrTVMX7CdoT2a8eSNvYmvqiuwziWViIhEpaO5+dz96jL+vm4v4y9sz6QhnXUFVjlQiYhI1NmblcPY\nl5awekcmvxjWjVsHtQ06UtRSiYhIVNm0N4uRUxaTkZ3Lc7cmc3nXpkFHimoqERGJGl9s3s+El1Oo\nVjWG2XcMokeC5sAqbyoREYkKbyxL58dzV9K2YU2mjupHQv0aQUeqFFQiIhLR3J1nPt3M4++vZ1D7\nhjx7a1/qVq8adKxKQyUiIhErFHJ+8c5apn6+jWG9W/DE9b2Ii60SdKxKRSUiIhEpNz/Ej+asYN6K\nnYy+oB0PXdVFl/AGQCUiIhEn+3g+E2ak8M+N+3Ub24CpREQkohw4cpzR0xazeudhHr++Jzcmtwo6\nUqWmEhGRiJGWcZSRUxax49Ax/nJLX40BCQMqERGJCOt2HWbklEXk5BUwc+wAkjWNe1hQiYhI2Fu0\nNYMxLy2mZlwscyeez3lNawcdSYqoREQkrM1fs5u7Xl1GQv3qvDxmAC3rVQ86kpxAJSIiYWvWolQe\nfGMVPRPqMeX2fjSoGRd0JClGJSIiYcfdefofm/jNBxu46LzGPHNLH2rE6eMqHOmnIiJhJRRy/vft\ntUz7YhvXJbXk8et7UjVGo9DDlUpERMLG8fwCfjh7BW+v3MXYb7TjwaEahR7uVCIiEhaOHM9nwssp\n/GvTfh64sjN3XNQh6EhSAioREQnc/iPHGTV1MWt3HeY3N/Ti+r4JQUeSElKJiEig0jKOcuuLC9l9\nOIfnb+vLpZ01Cj2SqEREJDBrdx5m5NRF5OaHmDl2AH3baBR6pFGJiEggvtxygHEvLaFWfCyvTBhE\nJ41Cj0gqERGpcO+v3s3ds5bRukENpo/uTwuNQo9YKhERqVCvLEzlob+tolerekwZ2Y/6GoUe0VQi\nIlIh3J0/fbyJJz/cwCWJjXl6hEahRwP9BEWk3BWEnEffWsP0BdsZ3qcl/+87GoUeLVQiIlKujucX\n8IPXVvDOql2Mv7A9k4Z01ij0KKISEZFyk5WTxx0vp/DF5gM8OLQz4y/UKPRooxIRkXKxL+s4t09d\nxPrdWTx5Yy+G99Eo9GikEhGRcy71wFFunbKQvYeP8/zIZC5JbBJ0JCknKhEROafW7Mxk5JTF5IdC\nzBw3gD6t6wcdScqRSkREzpkvNu9n/PQU6sTHMmv8IDo20Sj0aKcSEZFz4t1Vu7h31nLaNKzB9DH9\naV5Xo9ArA5WIiJy1GV9u52dvrqZP6/q8ODKZejU0Cr2yUImISJm5O7//+0b+8NFGLu3chKe/14fq\ncTFBx5IKpBIRkTIpCDk/f3M1Mxemcn3fBCYP76FR6JWQSkRESi0nr4D7XlvOe6t3M+GiDvxkSCJm\nGoVeGalERKRUDufkMX76Er7cksFDV3Vh7OD2QUeSAKlERKTE9mblcPuUxWzYk8Xvv9ubbye1DDqS\nBEwlIiIlsm1/NrdNWcS+rOO8MDKZizUKXVCJiEgJrN6Rye1TF1EQcl4ZN4AkjUKXIioRETmtzzft\nZ/z0JdSrEcdLo/vTsUmtoCNJGFGJiMgpvbNyF/e9tpx2jWry0uj+NKsbH3QkCTMqERE5qZcXbOPn\n89bQt3V9XhzZj7o1qgYdScKQSkRE/ou787sPN/DHjzdxeZcmPPW9PsRX1Sh0OTmViIj8R35BiJ+9\nuYZXF6VyY3ICj13Xg1iNQpfTUImICFA4Cv2uV5fx4do9fP/iDtz/LY1ClzNTiYgImUfzGDt9MUu2\nH+SRa7py+wXtgo4kEUIlIlLJ7co8xu1TFrN1fzZ/ujmJq3u2CDqSRBCViEgltmlvFre9uIjDOflM\nG9WP8zs2CjqSRJiIPGNmZu3N7EUzmxt0FpFIlbL9INc/u4DcAmfW+IEqECmTEpWImdUzs7lm9pWZ\nrTOzQWV5MzObYmZ7zWz1Sb43xMzWm9kmM5t0uvW4+xZ3H1OWDCICH3+1hxEvfEm96lV5feL5dG9Z\nN+hIEqFKejjrD8D77n69mcUBNU78ppk1AY65e9YJz3V0903F1jMNeAqYXuz1McDTwBVAOrDYzOYB\nMcDkYusY7e57S5hbRIqZvSSNB15fRdfmdZg6qh+NalULOpJEsDOWiJnVAS4Ebgdw91wgt9hiFwET\nzWyou+eY2TjgOmDoiQu5+2dm1vYkb9Mf2OTuW4recxYwzN0nA1eXZoNE5OTcnT9/spkn5q9ncKdG\nPHNLX2pV02lROTslOZzVHtgHTDWzZWb2gpnVPHEBd58DvA/MMrMRwGjgxlLkaAmknfA4vei5kzKz\nhmb2LJBkZg+cYplrzOy5zMzMUsQQiU6hkPPoW2t5Yv56hvVuwYsj+6lA5JwoSYnEAn2AZ9w9CcgG\nvnbOwt0fB3KAZ4Br3f1IKXKcbESTn2phdz/g7hPcvUPR3srJlnnL3cfXratjvVK5Hc8v4O5Zy5j2\nxTbGfqMdv7uxN3GxEXlNjYShkvwmpQPp7r6w6PFcCkvlv5jZYKA78AbwcClzpAOtTnicAOws5TpE\npJisnDxGT1vM2yt38eDQzjx0dVeqVNEodDl3zlgi7r4bSDOzxKKnLgPWnriMmSUBzwPDgFFAAzP7\nZSlyLAY6mVm7ohP3NwHzSvF6ESlmb1YONz33JQu3ZPDkjb0Yf2GHoCNJFCrpPu1dwEwzWwn0Bh4r\n9v0awA3uvtndQ8BIYHvxlZjZq8ACINHM0s1sDIC75wN3AvOBdcBsd19Tlg0SEdi87wjfeeYLtuzL\n5oWRyQzvkxB0JIlS5n7KUw9RITk52ZcsWRJ0DJEKk7I9gzEvLSHGjCm396NXq3pBR5IIZGYp7p58\npuV0eYZIFHl/9S7umbWcFvWqM21UP9o0rHnmF4mcBZWISJSY+vlW/vfttSS1qscLI/vRoGZc0JGk\nElCJiES4UMh57N11vPCvrXyrW1P+cFOS7kQoFUYlIhLBcvIK+OGcFbyzche3n9+Wn13dlRhdwisV\nSCUiEqEOHc1l/PQUFm3L4KdDuzB2cDvdiVAqnEpEJAKlZRzl9qmLSMs4xh9vTuLaXrqRlARDJSIS\nYVbvyGTUtMUczytg+pj+DGzfMOhIUompREQiyKcb9vH9GSnUqxHHK2MH0Klp7aAjSSWnEhGJEK8t\nTuXBN1ZzXtPaTBvVj6Z14oOOJKISEQl3oZDz+Pz1PPvpZgZ3asSfR/ShdnzVoGOJACoRkbB2LLeA\nH8xeznurdzNiQGsevbYbsTGaxl3Ch0pEJEztzcph3PQUVqYf4qGrujDmG7qEV8KPSkQkDK3fncXo\naYvJyM7l2Vv68q1uzYKOJHJSKhGRMPPphn3cOXMp1eNimH3HIHok6O6cEr5UIiJhZMaX23l43ho6\nNanFlNv70aJe9aAjiZyWSkQkDBSEnMlFkyhenNiYp77Xh1rV9M9Twp9+S0UCdjQ3n3tmLefDtXsY\nOagNP7u6q67AkoihEhEJ0K7MY4ybvoS1Ow/z8DVdGXVBu6AjiZSKSkQkIEtTD3LHyykcPZ7P87cl\nc1mXpkFHEik1lYhIAF5fms6k11fRrE48M8cO4DzNgSURSiUiUoEKQs4TRVOYDGzfgD+P6Kvb2EpE\nU4mIVJCsnDzunbWcj77ay4gBrXnk2m5U1Ql0iXAqEZEKkHrgKGOnL2bzvmx+Mawbtw5qG3QkkXNC\nJSJSzhZsPsD3Z6YQcpg+uj8XdGwUdCSRc0YlIlKOXlmYys/fXE2bhjV4cWQ/2jaqGXQkkXNKJSJS\nDo7nF/DoW2t5ZWEqFyc25o83J1FH9wCRKKQSETnH9hzOYeKMFJamHmLixR340TcTiamiKdwlOqlE\nRM6hJdsymDhzKdnH8/nziD4M7dE86Egi5UolInIOuDszvtzOo2+tJaF+dQ0glEpDJSJylnLyCvjZ\n31YzJyWdSxIb8/ubkqhbXec/pHJQiYichZ2HjjFhRgor0zO5+7JO3HtZJ6ro/IdUIioRkTJasPkA\nd76ylOP5IZ67tS/f1C1spRJSiYiUUijk/OWzLTwx/yvaNarJX25NpmOTWkHHEgmESkSkFA4dzeWH\ns1fw0Vd7uapnc349vAe1Nf5DKjGViEgJrUw/xMQZS9mblcOj13bjtkFtMNP5D6ncVCIiZ/Dvy3d/\n8fY6GteuxpwJ59O7Vb2gY4mEBZWIyGlkH89n0uureGvFTi5JbMyTN/amvu7/IfIfKhGRU9iwJ4uJ\nM1LYuj+b+7+VyMSLOujyXZFiVCIixbg7c1LSefjNNdSsFsvMsQMZ1KFh0LFEwpJKROQEh3Py+Okb\nq3lrxU7O79CQ33+3N03qxAcdSyRsqUREiixLPcjds5ax81AO938rkQkXddDsuyJnoBKRSi8Ucp79\nbDNPfrCBpnXimX3HIPq2qR90LJGIoBKRSm3v4Rzum72czzcd4KqezXnsuh6aPFGkFFQiUmn9Y/1e\nfjR7Bdm5+fx6eA++26+VBg+KlJJKRCqdY7kFTH5vHdMXbKdzs9q89r2BdGyie3+IlIVKRCqVFWmH\nuO+15WzZn83oC9rx4yGJxFeNCTqWSMRSiUilkFcQ4ul/bOJPH2+iSe1qzBw7gAs6Ngo6lkjEU4lI\n1Nuy7wj3zV7BirRDXJfUkkeu7aaT5yLniEpEota/J0781bvrqBYbw1PfS+Lqni2CjiUSVVQiEpV2\nHDrGpL+u5J8b93PheY154vqeNNXIc5FzTiUiUSUUcl5ZlMrkd9fhwC+GdeOWgbrvh0h5UYlI1Eg9\ncJSf/HUlC7Yc4BsdGzF5eA9aNagRdCyRqKYSkYhXEHJe+mIbT8xfT2wV08BBkQqkEpGItnnfEX48\ndyUp2w9ycWJjHruuBy3qVQ86lkiloRKRiHQ8v4C/fLqFp/6xifjYKvz2hl4M79NSex8iFUwlIhHn\nyy0H+Okbq9i8L5urejTn4Wu66p4fIgFRiUjEyMjOZfK765iTkk5C/epMHdWPSxKbBB1LpFJTiUjY\nc3fmpqTz2LvryMrJZ+LFHbj70k5Uj9OcVyJBU4lIWFu/O4ufv7mahVsz6NumPo9d14PEZppxVyRc\nqEQkLGUezeN3f9/Ay19up1a1WCYP78F3k1tRRberFQkrKhEJKwUh57XFaTwx/ysyj+UxYkAbfnDF\nedSvGRd0NBE5CZWIhI0l2zJ4eN4a1uw8TP92DXjkmm50bVEn6FgichoqEQncjkPHePz9r3hz+U6a\n143nTzcncXXP5hrzIRIBVCISmMxjefz5k01M/XwbAHdd2pGJF3egRpx+LUUihf61SoU7nl/AjC9T\n+dPHG8k8lsd1SS354TcTaanpSkQijkpEKkwo5Ly9ahdPzP+KtIxjDO7UiElXdqZbi7pBRxORMlKJ\nSLlzdz7dsI8nP9zAyvRMujSvw/TRPbjwvMZBRxORs6QSkXLj7nyx+QBPfriBlO0HSahfnd/c0Ivr\nkloSo/EeIlFBJSLlYtHWDH77wXoWbs2ged14fnVdd27o24q42CpBRxORc0glIufU4m0Z/PGjjfxz\n434a167GI9d05ab+rYmvqnmuRKKRSkTOmrvzyfp9/PmTTSzedpCGNeN46KoujBjQRpMkikQ5lYiU\nWUHIeWfVLp75ZDPrdh2mRd14HrmmK9/t11rlIVJJqESk1HLyCnh96Q6e+2wz2w4cpUPjmjxxfU+G\n9W6pcx4ilYxKREpsV+YxXl6wnVcXpXLwaB49Wtbl2Vv68M2uzTS7rkglpRKRM1qWepApn2/jvVW7\nCLlzRdemjL6gHf3bNdD8ViKVnEpETionr4B3Vu7i5S+3szztELWrxXL7+W0ZeX5bWjWoEXQ8EQkT\nKhH5L1/tPsysRWm8vjSdwzn5tG9Uk0ev7cZ3+iZQq5p+XUTkv+lTQTiam887K3fx6qJUlqYeIi6m\nClf2aMbN/VszQIesROQ0VCKVVH5BiM83H+Bvy3Ywf81ujuYW0KFxTR66qgvD+yTQQHcSFJESUIlU\nIu7Omp2HeWPZDuat2Mm+rOPUiY9lWO+WDO/TkuQ29bXXISKlohKJcu7Oqh2ZvL96N++v3s2W/dlU\njTEu7dyE65JacnFiE01JIiJlphKJQgUhZ2nqQd5btZv5a3az49AxYqoYA9s3YMzgdlzVozn1auhw\nlYicPZVIlMjIzuWfG/fxyfp9fLZhHweyc4mLqcLgTo245/JOXNGlKfV1nkNEzjGVSITKKwixMj2T\nzzbs45MN+1iZfgh3qF+jKhee15hLOzfh0s5NqB1fNeioIhLFVCIR4nh+ASvSMlm45QALt2aQsv0g\nx/IKqGLQq1U97r3sPC5KbEyPlnV1wycRqTARWSJm1h74KVDX3a8POs+55u6kHzzGivRDrEg7xIq0\nTJanHyI3PwRA52a1uTE5gQHtGzKofUMdphKRwJSoRMxsG5AFFAD57p5cljczsynA1cBed+9e7HtD\ngD8AMcAL7v7rU63H3bcAY8xsbllyhJPj+QVs3Z/N+t1ZbNxzhNU7M1mZnklGdi4AcbFV6Nq8DrcO\nbMOAdg3o366BToqLSNgozZ7IJe6+/2TfMLMmwDF3zzrhuY7uvqnYotOAp4DpxV4fAzwNXAGkA4vN\nbB6FhTK52DpGu/veUuQOXEHI2X04h9QDR0nLOEpqxlG27D/Chj1H2Lo/m4KQAxBTxejUpBaXd2lC\nz4R69EqoR2Kz2ppeXUTC1rk6nHURMNHMhrp7jpmNA64Dhp64kLt/ZmZtT/L6/sCmoj0MzGwWMMzd\nJ1O45xJW3J2juQUcOZ5PVk4+WTl5ZB7LY/+RXPZlHS/8c+Q4+7Jy2J2Zw45Dx8gr8P+8PqaK0ap+\ndTo1rc2Qbs3o1LQWic1q065RTarFasyGiESOkpaIAx+YmQN/cffn/uub7nPMrB0wy8zmAKMp3Kso\nqZZA2gmP04EBp1rYzBoCvwKSzOyBorIpvsw1wDUdO3YsRYz/b+KMFNbvziIvFKKgwMkLOfkFIfIL\nnOzcfEJ+6tfWqhZL49rVaFyrGt1b1uXKHs1p3aDGf/40qxtP1RjtXYhI5CtpiVzg7juLDlt9aGZf\nuftnJy7g7o8X7UE8A3Rw9yOlyHGyy4lO+THt7geACadbobu/BbyVnJw8rhQ5/qN1gxrEVDGqxlQh\ntooRG1OFqjFGTBWjVrVYalWLpXZ8VWrFx1K7Wiy14wuLo1GtatTUbLciUkmU6NPO3XcW/b3XzN6g\n8PDTf5WImQ0GugNvAA8Dd5YiRzrQ6oTHCcDOUrz+nHtgaJcg315EJCKc8ZiKmdU0s9r//hr4JrC6\n2DJJwPPAMGAU0MDMflmKHIuBTmbWzszigJuAeaV4vYiIBKAkB+abAv8ysxXAIuAdd3+/2DI1gBvc\nfbO7h4CRwPbiKzKzV4EFQKKZpZvZGAB3z6dwz2U+sA6Y7e5ryrpRIiJSMcz9NGeIo0BycrIvWbIk\n6BgiIhHFzFJKMiZQlwiJiEiZqURERKTMVCIiIlJmKhERESkzlYiIiJRZ1F+dZWb7OMnlxiXUCDjp\npJNRqLJsa2XZTtC2RquK2tY27t74TAtFfYmcDTNbUtZp7yNNZdnWyrKdoG2NVuG2rTqcJSIiZaYS\nERGRMlOJnN5zZ14kalSWba0s2wna1mgVVtuqcyIiIlJm2hMREZEyU4mchJkNMbP1ZrbJzCYFnae8\nmFkrM/uHma0zszVmdk/QmcqbmcWY2TIzezvoLOXJzOqZ2Vwz+6ro5zso6EzlxczuK/r9XW1mr5pZ\nfNCZzhUzm2Jme81s9QnPNTCzD81sY9Hf9YPMqBIpxsxigKeBK4GuwM1m1jXYVOUmH/ihu3cBBgL/\nE8Xb+m/3UHi7gWj3B+B9d+8M9CJKt9nMWgJ3A8nu3h2IofB+RNFiGjCk2HOTgI/cvRPwUdHjwKhE\nvq4/sMndt7h7LjCLwpttRR133+XuS4u+zqLwg6ZlsKnKj5klAFcBLwSdpTyZWR3gQuBFAHfPdfdD\nwaYqV7FAdTOLpfDeRoHeFfVcKroNeUaxp4cBLxV9/RLw7QoNVYxK5OtaAmknPE4nij9Y/83M2gJJ\nwMJgk5Sr3wM/BkJBByln7YF9wNSiQ3cvFN2VNOq4+w7gN0AqsAvIdPcPgk1V7pq6+y4o/I8g0CTI\nMCqRr7OTPBfVl7CZWS3gr8C97n446DzlwcyuBva6e0rQWSpALNAHeMbdk4BsAj7kUV6KzgcMA9oB\nLYCaZnZLsKkqF5XI16UDrU54nEAU7R4XZ2ZVKSyQme7+etB5ytEFwLVmto3CQ5SXmtmMYCOVm3Qg\n3d3/vVc5l8JSiUaXA1vdfZ+gE+V5AAABD0lEQVS75wGvA+cHnKm87TGz5gBFf+8NMoxK5OsWA53M\nrJ2ZxVF4km5ewJnKhZkZhcfN17n7k0HnKU/u/oC7J7h7Wwp/ph+7e1T+j9XddwNpZpZY9NRlwNoA\nI5WnVGCgmdUo+n2+jCi9iOAE84CRRV+PBN4MMAuxQb55OHL3fDO7E5hP4ZUeU9x9TcCxyssFwK3A\nKjNbXvTcg+7+boCZ5Ny4C5hZ9B+hLcCogPOUC3dfaGZzgaUUXm24jDAb0X02zOxV4GKgkZmlAw8D\nvwZmm9kYCkv0huASasS6iIicBR3OEhGRMlOJiIhImalERESkzFQiIiJSZioREREpM5WIiIiUmUpE\nRETKTCUiIiJl9n81/nendph6dQAAAABJRU5ErkJggg==\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x11324f810>"
+       "<Figure size 640x480 with 1 Axes>"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0.9928402125808485, 0.1574341520010021, 6.30638397045216)\n",
+      "([], [])\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "(10.35875781412394, 1.3974330184009545, 0.73019293558623699)"
+       "<Figure size 640x480 with 1 Axes>"
       ]
      },
-     "execution_count": 5,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -253,16 +259,18 @@
     "import scipy.integrate as si\n",
     "import math\n",
     "import matplotlib.pyplot as pl\n",
-    "n = 1\n",
-    "P0 = 100.\n",
-    "gamma = 1 + 1./n\n",
-    "gam1 = gamma - 1\n",
-    "def rhs(r, y) :\n",
+    "n = 1.\n",
+    "rho_central = 0.129285\n",
+    "\n",
+    "P0 = 1. # ZACH NOTES: CHANGED FROM 100.\n",
+    "gamma = 1. + 1./n\n",
+    "gam1 = gamma - 1.\n",
+    "def rhs( r, y) :\n",
     "# In \\tilde units\n",
     "#\n",
     "    rho = y[0]\n",
-    "    m = y[1]\n",
-    "    nu = y[2]\n",
+    "    m   = y[1]\n",
+    "    nu  = y[2]\n",
     "    if( r < 1e-4 or m <= 0.) : \n",
     "        drhodr = -rho*(1 + P0*rho**gam1)*(4.*math.pi*rho*r/3. + 4*math.pi*r*P0*rho**gamma)/(gamma*(1.-8*math.pi*rho*r*r/3.))/(P0*rho**gam1)\n",
     "    else :\n",
@@ -286,7 +294,7 @@
     "\n",
     "    r = 0.\n",
     "\n",
-    "    while integrator.successful() and rho > 1e-3*y0[0] : \n",
+    "    while integrator.successful() and rho > 1e-4*y0[0] : \n",
     "        rho, m, nu = integrator.integrate(r + dr)\n",
     "        r = integrator.t\n",
     "\n",
@@ -300,48 +308,65 @@
     "        nuArr.append(nu)\n",
     "        \n",
     "    nuArr = np.array(nuArr)\n",
+    "    # Rescale solution to nu so that it satisfies BC: exp(nu(R))=exp(nutilde-nu(r=R)) * (1 - 2m(R)/R)\n",
+    "    #   Thus, nu(R) = (nutilde - nu(r=R)) + log(1 - 2*m(R)/R)\n",
     "    nuArr = nuArr - nuArr[-1] + math.log(1.-2.*mArr[-1]/rArr[-1])\n",
-    "    phiArr = np.exp(nuArr) #- math.exp(nuArr[-1]) + (1. - 2*m/r)\n",
-    "        \n",
+    "    phiArr = []\n",
+    "    for i in range(len(nuArr)):\n",
+    "        phiArr.append(np.exp(nuArr[i]))\n",
+    "    phiArr_np = np.exp(nuArr) #- math.exp(nuArr[-1]) + (1. - 2*m/r)\n",
+    "\n",
+    "    # Append to r array so it samples outside the star, starting at exp(0.01)*R, up to exp(5.0)*R ~ 148*R.\n",
+    "    orig_rArrlength = len(rArr)\n",
+    "    \n",
+    "    M = mArr[-1]\n",
+    "    R = rArr[-1]\n",
+    "    PHI = phiArr[-1]\n",
+    "\n",
+    "    rArr.extend(np.exp(np.arange(0.01,5.0,0.01))*rArr[-1])\n",
+    "#     print(rArr[-1])\n",
+    "\n",
+    "    for i in range(orig_rArrlength,len(rArr)):\n",
+    "        mArr.append(M)\n",
+    "        phiArr.append(1. - 2.*M/rArr[i])\n",
+    "        rhoArr.append(0.)\n",
+    "\n",
+    "    # Appending a Python array does what one would reasonably expect.\n",
+    "    #   Appending a numpy array allocates space for a new array with size+1,\n",
+    "    #   then copies the data over... over and over... super inefficient.\n",
+    "    mArr_np       = np.array(mArr)\n",
+    "    phiArr_np     = np.array(phiArr)\n",
+    "    rArr_np       = np.array(rArr)\n",
+    "    rhoArr_np     = np.array(rhoArr)\n",
+    "\n",
+    "    confFactor_np = (1.0 / 12.0) * np.log(1.0/(1.0 - 2.0*mArr_np/rArr_np))\n",
     "    if( showPlot) :\n",
-    "        pl.semilogy(rArr, phiArr)\n",
+    "        pl.semilogy(rArr_np, phiArr_np)\n",
     "        pl.show()\n",
-    "        \n",
+    "\n",
     "    if( dumpData) : \n",
-    "        np.savetxt( \"output.txt\", zip(rArr,rhoArr,mArr,phiArr), fmt=\"%12.7e\")\n",
+    "        np.savetxt( \"output.txt\", zip(rArr_np,rhoArr_np,mArr_np,phiArr_np,confFactor_np), fmt=\"%.15e\")\n",
+    "#        np.savetxt( \"output.txt\", zip(rArr,rhoArr,mArr,phiArr), fmt=\"%12.7e\")\n",
     "        \n",
-    "    return rArr[-1], mArr[-1], phiArr[-1]\n",
+    "#    return rArr[-1], mArr[-1], phiArr[-1]\n",
+    "    return R, M, PHI\n",
     "\n",
     "mass = []\n",
     "radius = []\n",
     "\n",
-    "integrateStar(0.001, True, True)\n",
-    "#for rho0 in np.arange(0.001, 0.02, 0.001):\n",
-    "#    r,m = integrateStar( rho0)\n",
-    "#    mass.append(m)\n",
-    "#    radius.append(r)\n",
-    "    \n",
-    "#print(mass, radius)\n",
-    "#pl.clf()\n",
-    "#pl.plot(radius,mass)\n",
-    "#pl.show()\n"
+    "# r,m,expnu = integrateStar(0.1, True, True)\n",
+    "r,m,expnu = integrateStar(rho_central, True, True)\n",
+    "print(r,m,r/m)\n",
+    "# for rho0 in np.arange(0.01, 0.2, 0.01):\n",
+    "#     r,m,expnu = integrateStar(rho0)\n",
+    "#     mass.append(m)\n",
+    "#     radius.append(r)\n",
+    "\n",
+    "print(mass, radius)\n",
+    "pl.clf()\n",
+    "pl.plot(radius,mass)\n",
+    "pl.show()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -360,7 +385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
