Tutorial-ADM_Initial_Data-Converting_ADMCartesian_to_BSSNCurvilinear: improve comments

--- a/Tutorial-ADM_Initial_Data-Converting_ADMCartesian_to_BSSNCurvilinear.ipynb
+++ b/Tutorial-ADM_Initial_Data-Converting_ADMCartesian_to_BSSNCurvilinear.ipynb
@@ -49,7 +49,7 @@
     "import reference_metric as rfm\n",
     "import BSSN.BSSN_RHSs as bssn # needed for parameters\n",
     "\n",
-    "# Step P2: Import Brill-Lindquist initial data for trial conversion\n",
+    "# Step P2: Import Brill-Lindquist initial data\n",
     "import BSSN.BrillLindquist as bl\n",
     "bl.BrillLindquist()\n",
     "Cartxyz = bl.Cartxyz\n",
@@ -61,7 +61,7 @@
     "\n",
     "# The ADM & BSSN formalisms only work in 3D; they are 3+1 decompositions of Einstein's equations.\n",
     "#    To implement axisymmetry or spherical symmetry, simply set all spatial derivatives in\n",
-    "#    the relevant angular directions to zero.\n",
+    "#    the relevant angular directions to zero; DO NOT SET DIM TO ANYTHING BUT 3.\n",
     "# Step 0: Set spatial dimension (must be 3 for BSSN)\n",
     "DIM = 3\n",
     "\n",
