--- a/Tutorial-ADM_Initial_Data-Converting_ADMCartesian_to_BSSNCurvilinear.ipynb
+++ b/Tutorial-ADM_Initial_Data-Converting_ADMCartesian_to_BSSNCurvilinear.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Converting Cartesian ADM Initial Data to BSSN Curvilinear Initial Data\n",
+    "# Converting Cartesian ADM Initial Data to BSSN Curvilinear Initial Data, Using Brill-Lindquist Initial Data as an Example\n",
     "\n",
-    "### NRPy+ Source Code for this module: [BSSN/CartesianADMID_to_BSSNCurvilinearID.py](../edit/BSSN/BSSNConstraints.py)\n",
+    "### NRPy+ Source Code for this module: [BSSN/CartesianADMID_to_BSSNCurvilinearID.py](../edit/BSSN/CartesianADMID_to_BSSNCurvilinearID.py)\n",
     "\n",
     "Here we use NRPy+ to first convert the ADM variables\n",
     "\n",
@@ -29,7 +29,13 @@
     "$$\n",
     "\\bar{\\gamma}_{i j} = \\left(\\frac{\\bar{\\gamma}}{\\gamma}\\right)^{1/3} \\gamma_{ij}.\n",
     "$$\n",
-    "Brill-Linquist initial data are conformally flat, meaning that $\\bar{\\gamma}=\\hat{\\gamma}=1$ in Cartesian coordinates. So for these initial data in Cartesian coordinates we have\n",
+    "\n",
+    "Next we apply two important facts:\n",
+    "\n",
+    "1. We choose $\\bar{\\gamma}=\\hat{\\gamma}$. \n",
+    "1. In Cartesian coordinates, $\\hat{\\gamma}=1$. \n",
+    "\n",
+    "Therefore, for initial data in Cartesian coordinates, we have\n",
     "$$\n",
     "\\bar{\\gamma}_{i j} = \\gamma^{-1/3} \\gamma_{ij}.\n",
     "$$"
@@ -77,12 +83,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Second, we convert $K_{ij}$ to $\\bar{A}_{ij}$ and $K$, where (Eq. 3 of [Baumgarte *et al.*](https://arxiv.org/pdf/1211.6632.pdf)):\n",
+    "Second, we convert the extrinsic curvature $K_{ij}$ to the trace-free extrinsic curvature $\\bar{A}_{ij}$, plus the trace of the extrinsic curvature $K$, where (Eq. 3 of [Baumgarte *et al.*](https://arxiv.org/pdf/1211.6632.pdf)):\n",
     "\n",
     "\\begin{align}\n",
     "K &= \\gamma^{ij} K_{ij} \\\\\n",
-    "\\bar{A}_{ij} &= \\left(\\frac{\\gamma}{\\bar{\\gamma}}\\right)^{1/3} \\left(K_{ij} - \\frac{1}{3} \\gamma_{ij} K \\right)\\\\\n",
-    "&= \\gamma^{1/3} \\left(K_{ij} - \\frac{1}{3} \\gamma_{ij} K \\right)\n",
+    "\\bar{A}_{ij} &= \\left(\\frac{\\bar{\\gamma}}{\\gamma}\\right)^{1/3} \\left(K_{ij} - \\frac{1}{3} \\gamma_{ij} K \\right)\\\\\n",
+    "&= \\gamma^{-1/3} \\left(K_{ij} - \\frac{1}{3} \\gamma_{ij} K \\right)\n",
     "\\end{align}"
    ]
   },
@@ -102,7 +108,7 @@
     "ACartbarDD = ixp.zerorank2()\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
-    "        ACartbarDD[i][j] = gammaCartDET**(sp.Rational(1,3))*\\\n",
+    "        ACartbarDD[i][j] = gammaCartDET**(-sp.Rational(1,3))*\\\n",
     "          (KCartDD[i][j] - sp.Rational(1,3)*gammaCartDD[i][j]*trKCart)"
    ]
   },
