BSSN initial data infrastructure: fix an order-of-operation flub -- no impact on results, but makes addition of new initial data modules far easier.

--- a/Tutorial-ADM_Initial_Data-Converting_ADMCartesian_to_BSSNCurvilinear.ipynb
+++ b/Tutorial-ADM_Initial_Data-Converting_ADMCartesian_to_BSSNCurvilinear.ipynb
@@ -52,7 +52,9 @@
     "import NRPy_param_funcs as par\n",
     "from outputC import *\n",
     "import indexedexp as ixp\n",
-    "import reference_metric as rfm\n",
+    "# Set the destination reference metric to spherical, just for testing this tutorial module:\n",
+    "par.set_parval_from_str(\"reference_metric::CoordSystem\",\"Spherical\")\n",
+    "rfm.reference_metric()\n",
     "import BSSN.BSSN_RHSs as bssn # needed for parameters\n",
     "\n",
     "# Step P2: Import Brill-Lindquist initial data\n",
