--- a/Tutorial-ADM_Initial_Data-UIUC_BlackHole.ipynb
+++ b/Tutorial-ADM_Initial_Data-UIUC_BlackHole.ipynb
@@ -32,20 +32,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::RMAX\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter UIUCBlackHole::M\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter UIUCBlackHole::chi\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Step P0: Load needed modules\n",
     "import sympy as sp\n",
@@ -71,8 +60,6 @@
     "# Step 0: Set spatial dimension (must be 3 for BSSN)\n",
     "DIM = 3\n",
     "par.set_parval_from_str(\"grid::DIM\",DIM)\n",
-    "\n",
-    "\n",
     "\n",
     "# Step 1: Set psi, the conformal factor:\n",
     "\n",
@@ -116,7 +103,10 @@
     "\n",
     "alphaSph = sp.sympify(1)\n",
     "betaSphU = ixp.zerorank1() # We generally choose \\beta^i = 0 for these initial data\n",
-    "BSphU    = ixp.zerorank1() # We generally choose B^i = 0 for these initial data"
+    "BSphU    = ixp.zerorank1() # We generally choose B^i = 0 for these initial data\n",
+    "\n",
+    "# Validated against original SENR: KSphDD[0][2], KSphDD[1][2], gammaSphDD[2][2], gammaSphDD[0][0], gammaSphDD[1][1]\n",
+    "#print(sp.mathematica_code(gammaSphDD[1][1]))"
    ]
   }
  ],
