--- a/Tutorial-ADM_Initial_Data-Brill-Lindquist.ipynb
+++ b/Tutorial-ADM_Initial_Data-Brill-Lindquist.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Brill-Lindquist Initial data\n",
     "\n",
-    "## This module sets up initial data for a merging black hole system in *spherical coordinates*\n",
+    "## This module sets up initial data for a merging black hole system in Cartesian coordinates\n",
     "\n",
     "<font color='green'>**This module has been validated to exhibit convergence to zero of the Hamiltonian constraint violation at the expected order to the exact solution (see plot at bottom), and all quantities have been validated against the [original SENR code](https://bitbucket.org/zach_etienne/nrpy).**</font>"
    ]
@@ -81,6 +81,95 @@
     "alphaCart = 1/psi**2\n",
     "betaCartU = ixp.zerorank1() # We generally choose \\beta^i = 0 for these initial data\n",
     "BCartU    = ixp.zerorank1() # We generally choose B^i = 0 for these initial data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## NRPy+ Module Code Validation\n",
+    "\n",
+    "Here, as a code validation check, we verify agreement in the SymPy expressions for Brill-Lindquist initial data between\n",
+    "\n",
+    "1. this tutorial and \n",
+    "2. the NRPy+ [BSSN.BrillLindquist](../edit/BSSN/BrillLindquist.py) module."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "initialize_param() minor warning: Did nothing; already initialized parameter Brill-Lindquist::BH1_posn_x\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter Brill-Lindquist::BH1_posn_y\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter Brill-Lindquist::BH1_posn_z\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter Brill-Lindquist::BH1_mass\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter Brill-Lindquist::BH2_posn_x\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter Brill-Lindquist::BH2_posn_y\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter Brill-Lindquist::BH2_posn_z\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter Brill-Lindquist::BH2_mass\n",
+      "^^^ Ignore the minor warning(s) above. ^^^\n",
+      "\n",
+      "Consistency check between Brill-Lindquist tutorial and NRPy+ BSSN.BrillLindquist module:\n",
+      "alphaCart - bl.alphaCart: Should be zero: 0\n",
+      "betaCartU[0] - bl.betaCartU[0]: Should be zero: 0\n",
+      "BCartU[0] - bl.BaCartU[0]: Should be zero: 0\n",
+      "gammaCartDD[0][0] - bl.gammaCartDD[0][0]: Should be zero: 0\n",
+      "KCartDD[0][0] - bl.KCartDD[0][0]: Should be zero: 0\n",
+      "gammaCartDD[0][1] - bl.gammaCartDD[0][1]: Should be zero: 0\n",
+      "KCartDD[0][1] - bl.KCartDD[0][1]: Should be zero: 0\n",
+      "gammaCartDD[0][2] - bl.gammaCartDD[0][2]: Should be zero: 0\n",
+      "KCartDD[0][2] - bl.KCartDD[0][2]: Should be zero: 0\n",
+      "betaCartU[1] - bl.betaCartU[1]: Should be zero: 0\n",
+      "BCartU[1] - bl.BaCartU[1]: Should be zero: 0\n",
+      "gammaCartDD[1][0] - bl.gammaCartDD[1][0]: Should be zero: 0\n",
+      "KCartDD[1][0] - bl.KCartDD[1][0]: Should be zero: 0\n",
+      "gammaCartDD[1][1] - bl.gammaCartDD[1][1]: Should be zero: 0\n",
+      "KCartDD[1][1] - bl.KCartDD[1][1]: Should be zero: 0\n",
+      "gammaCartDD[1][2] - bl.gammaCartDD[1][2]: Should be zero: 0\n",
+      "KCartDD[1][2] - bl.KCartDD[1][2]: Should be zero: 0\n",
+      "betaCartU[2] - bl.betaCartU[2]: Should be zero: 0\n",
+      "BCartU[2] - bl.BaCartU[2]: Should be zero: 0\n",
+      "gammaCartDD[2][0] - bl.gammaCartDD[2][0]: Should be zero: 0\n",
+      "KCartDD[2][0] - bl.KCartDD[2][0]: Should be zero: 0\n",
+      "gammaCartDD[2][1] - bl.gammaCartDD[2][1]: Should be zero: 0\n",
+      "KCartDD[2][1] - bl.KCartDD[2][1]: Should be zero: 0\n",
+      "gammaCartDD[2][2] - bl.gammaCartDD[2][2]: Should be zero: 0\n",
+      "KCartDD[2][2] - bl.KCartDD[2][2]: Should be zero: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Reset the list of gridfunctions, as registering a gridfunction\n",
+    "#   twice will spawn an error.\n",
+    "gri.glb_gridfcs_list = []\n",
+    "\n",
+    "# First we import needed core NRPy+ modules\n",
+    "import reference_metric as rfm\n",
+    "import grid as gri\n",
+    "# Unused, but needed because BrillLindquist() also does tensor rescalings.\n",
+    "rfm.reference_metric()\n",
+    "\n",
+    "import BSSN.BrillLindquist as bl\n",
+    "bl.BrillLindquist()\n",
+    "\n",
+    "# It is SAFE to ignore the warning(s) from re-initializing parameters.\n",
+    "print(\"^^^ Ignore the minor warning(s) above. ^^^\\n\")\n",
+    "print(\"Consistency check between Brill-Lindquist tutorial and NRPy+ BSSN.BrillLindquist module:\")\n",
+    "print(\"alphaCart - bl.alphaCart: Should be zero: \"+str(sp.simplify(alphaCart - bl.alphaCart)))\n",
+    "for i in range(DIM):\n",
+    "    print(\"betaCartU[\"+str(i)+\"] - bl.betaCartU[\"+str(i)+\"]: Should be zero: \"+\\\n",
+    "          str(sp.simplify(betaCartU[i] - bl.betaCartU[i])))\n",
+    "    print(\"BCartU[\"+str(i)+\"] - bl.BaCartU[\"+str(i)+\"]: Should be zero: \"+str(sp.simplify(BCartU[i] - bl.BCartU[i])))\n",
+    "    for j in range(DIM):\n",
+    "        print(\"gammaCartDD[\"+str(i)+\"][\"+str(j)+\"] - bl.gammaCartDD[\"+str(i)+\"][\"+str(j)+\"]: Should be zero: \"+\\\n",
+    "              str(sp.simplify(gammaCartDD[i][j] - bl.gammaCartDD[i][j])))\n",
+    "        print(\"KCartDD[\"+str(i)+\"][\"+str(j)+\"] - bl.KCartDD[\"+str(i)+\"][\"+str(j)+\"]: Should be zero: \"+\\\n",
+    "              str(sp.simplify(KCartDD[i][j] - bl.KCartDD[i][j])))"
    ]
   }
  ],
