ADM_Initial_Data tutorial modules, python codes, especially UIUC_BlackHole: Major updates and fixes.

--- a/Tutorial-ADM_Initial_Data-UIUC_BlackHole.ipynb
+++ b/Tutorial-ADM_Initial_Data-UIUC_BlackHole.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# UIUC Black Hole Initial data\n",
     "\n",
-    "## This module sets up initial data for a merging black hole system in *spherical coordinates*\n",
+    "## This module sets up initial data for a merging black hole system in spherical coordinates. We can convert from spherical to any coordinate system defined in [reference_metric.py](../edit/reference_metric.py) (e.g., SinhSpherical, Cylindrical, Cartesian, etc.) using the [ADMSpherical-to-BSSNCurvilinear converter module](Tutorial-ADM_Initial_Data-Converting_ADMSpherical_to_BSSNCurvilinear)\n",
+    "\n",
+    "### NRPy+ Source Code for this module: [BSSN/BrillLindquist.py](../edit/BSSN/BrillLindquist.py)\n",
     "\n",
     "<font color='green'>**All quantities have been validated against the [original SENR code](https://bitbucket.org/zach_etienne/nrpy).**</font>"
    ]
@@ -43,17 +45,9 @@
     "import grid as gri\n",
     "from outputC import *\n",
     "import reference_metric as rfm\n",
-    "import BSSN.BSSN_RHSs\n",
     "\n",
-    "# Step P1: Set up reference metric\n",
-    "# Step P1a: These data are defined in Spherical coordinates\n",
-    "par.set_parval_from_str(\"reference_metric::CoordSystem\",\"Spherical\")\n",
-    "# Step P1b: Set up needed reference metric quantities\n",
-    "rfm.reference_metric()\n",
-    "# Set basic numerical grid coordinate quantities:\n",
-    "r = rfm.xx[0]\n",
-    "th = rfm.xx[1]\n",
-    "ph = rfm.xx[2]\n",
+    "# All gridfunctions will be written in terms of spherical coordinates (r, th, ph):\n",
+    "r,th,ph = sp.symbols('r th ph', real=True)\n",
     "\n",
     "thismodule = \"UIUCBlackHole\"\n",
     "\n",
@@ -107,6 +101,89 @@
     "\n",
     "# Validated against original SENR: KSphDD[0][2], KSphDD[1][2], gammaSphDD[2][2], gammaSphDD[0][0], gammaSphDD[1][1]\n",
     "#print(sp.mathematica_code(gammaSphDD[1][1]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## NRPy+ Module Code Validation\n",
+    "\n",
+    "Here, as a code validation check, we verify agreement in the SymPy expressions for UIUC black hole initial data between\n",
+    "\n",
+    "1. this tutorial and \n",
+    "2. the NRPy+ [BSSN.UIUCBlackHole](../edit/BSSN/UIUCBlackHole.py) module."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "initialize_param() minor warning: Did nothing; already initialized parameter UIUCBlackHole::M\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter UIUCBlackHole::chi\n",
+      "^^^ Ignore the minor warning(s) above. ^^^\n",
+      "\n",
+      "Consistency check between Brill-Lindquist tutorial and NRPy+ BSSN.BrillLindquist module:\n",
+      "alphaSph - uibh.alphaSph: Should be zero: 0\n",
+      "betaSphU[0] - uibh.betaSphU[0]: Should be zero: 0\n",
+      "BSphU[0] - uibh.BaSphU[0]: Should be zero: 0\n",
+      "gammaSphDD[0][0] - uibh.gammaSphDD[0][0]: Should be zero: 0\n",
+      "KSphDD[0][0] - uibh.KSphDD[0][0]: Should be zero: 0\n",
+      "gammaSphDD[0][1] - uibh.gammaSphDD[0][1]: Should be zero: 0\n",
+      "KSphDD[0][1] - uibh.KSphDD[0][1]: Should be zero: 0\n",
+      "gammaSphDD[0][2] - uibh.gammaSphDD[0][2]: Should be zero: 0\n",
+      "KSphDD[0][2] - uibh.KSphDD[0][2]: Should be zero: 0\n",
+      "betaSphU[1] - uibh.betaSphU[1]: Should be zero: 0\n",
+      "BSphU[1] - uibh.BaSphU[1]: Should be zero: 0\n",
+      "gammaSphDD[1][0] - uibh.gammaSphDD[1][0]: Should be zero: 0\n",
+      "KSphDD[1][0] - uibh.KSphDD[1][0]: Should be zero: 0\n",
+      "gammaSphDD[1][1] - uibh.gammaSphDD[1][1]: Should be zero: 0\n",
+      "KSphDD[1][1] - uibh.KSphDD[1][1]: Should be zero: 0\n",
+      "gammaSphDD[1][2] - uibh.gammaSphDD[1][2]: Should be zero: 0\n",
+      "KSphDD[1][2] - uibh.KSphDD[1][2]: Should be zero: 0\n",
+      "betaSphU[2] - uibh.betaSphU[2]: Should be zero: 0\n",
+      "BSphU[2] - uibh.BaSphU[2]: Should be zero: 0\n",
+      "gammaSphDD[2][0] - uibh.gammaSphDD[2][0]: Should be zero: 0\n",
+      "KSphDD[2][0] - uibh.KSphDD[2][0]: Should be zero: 0\n",
+      "gammaSphDD[2][1] - uibh.gammaSphDD[2][1]: Should be zero: 0\n",
+      "KSphDD[2][1] - uibh.KSphDD[2][1]: Should be zero: 0\n",
+      "gammaSphDD[2][2] - uibh.gammaSphDD[2][2]: Should be zero: 0\n",
+      "KSphDD[2][2] - uibh.KSphDD[2][2]: Should be zero: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Reset the list of gridfunctions, as registering a gridfunction\n",
+    "#   twice will spawn an error.\n",
+    "gri.glb_gridfcs_list = []\n",
+    "\n",
+    "# First we import needed core NRPy+ modules\n",
+    "import reference_metric as rfm\n",
+    "import grid as gri\n",
+    "# Unused, but needed because BrillLindquist() also does tensor rescalings.\n",
+    "rfm.reference_metric()\n",
+    "\n",
+    "import BSSN.UIUCBlackHole as uibh\n",
+    "uibh.UIUCBlackHole()\n",
+    "\n",
+    "# It is SAFE to ignore the warning(s) from re-initializing parameters.\n",
+    "print(\"^^^ Ignore the minor warning(s) above. ^^^\\n\")\n",
+    "print(\"Consistency check between Brill-Lindquist tutorial and NRPy+ BSSN.BrillLindquist module:\")\n",
+    "print(\"alphaSph - uibh.alphaSph: Should be zero: \"+str(sp.simplify(alphaSph - uibh.alphaSph)))\n",
+    "for i in range(DIM):\n",
+    "    print(\"betaSphU[\"+str(i)+\"] - uibh.betaSphU[\"+str(i)+\"]: Should be zero: \"+\\\n",
+    "          str(sp.simplify(betaSphU[i] - uibh.betaSphU[i])))\n",
+    "    print(\"BSphU[\"+str(i)+\"] - uibh.BaSphU[\"+str(i)+\"]: Should be zero: \"+str(sp.simplify(BSphU[i] - uibh.BSphU[i])))\n",
+    "    for j in range(DIM):\n",
+    "        print(\"gammaSphDD[\"+str(i)+\"][\"+str(j)+\"] - uibh.gammaSphDD[\"+str(i)+\"][\"+str(j)+\"]: Should be zero: \"+\\\n",
+    "              str(sp.simplify(gammaSphDD[i][j] - uibh.gammaSphDD[i][j])))\n",
+    "        print(\"KSphDD[\"+str(i)+\"][\"+str(j)+\"] - uibh.KSphDD[\"+str(i)+\"][\"+str(j)+\"]: Should be zero: \"+\\\n",
+    "              str(sp.simplify(KSphDD[i][j] - uibh.KSphDD[i][j])))"
    ]
   }
  ],
