UIUCBlackHole -> BSSNCurvilinear conversion runs without error

--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb
@@ -123,7 +123,7 @@
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::RMAX\n",
       "Generating C code for BSSN RHSs in Spherical coordinates.\n",
-      "Finished in 34.999131918 seconds.\n"
+      "Finished in 37.0432269573 seconds.\n"
      ]
     }
    ],
@@ -196,7 +196,7 @@
      "output_type": "stream",
      "text": [
       "Generating C code for Hamiltonian constraint\n",
-      "Finished in 10.3316171169 seconds.\n"
+      "Finished in 9.99214315414 seconds.\n"
      ]
     }
    ],
@@ -381,7 +381,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting BSSN/curvilinear_parity_and_outer_boundary_conditions.h\n"
+      "Writing BSSN/curvilinear_parity_and_outer_boundary_conditions.h\n"
      ]
     }
    ],
@@ -1092,13 +1092,13 @@
      "text": [
       "Now compiling, should take ~10 seconds...\n",
       "\n",
-      "Finished in 7.89480686188 seconds. Now running at low-resolution. Should take ~25 seconds...\n",
+      "Finished in 7.64971113205 seconds. Now running at low-resolution. Should take ~25 seconds...\n",
       "\n",
-      "\u001b[2KIt: 1100 t=7.50 | 100.0%; ETA 0 s | t/h 1811.37 | gp/s 5.10e+05\n",
-      "Finished in 14.9408910275 seconds, now running at higher-resolution. Should take ~75 seconds...\n",
+      "\u001b[2KIt: 1100 t=7.50 | 100.0%; ETA 0 s | t/h 1864.38 | gp/s 5.25e+05\n",
+      "Finished in 14.5140941143 seconds, now running at higher-resolution. Should take ~75 seconds...\n",
       "\n",
-      "\u001b[2KIt: 1956 t=7.50 | 100.0%; ETA 0 s | t/h 590.60 | gp/s 5.26e+05\n",
-      "Finished in 45.7639729977 seconds.\n"
+      "\u001b[2KIt: 1956 t=7.50 | 100.0%; ETA 0 s | t/h 583.89 | gp/s 5.20e+05\n",
+      "Finished in 46.3203380108 seconds.\n"
      ]
     }
    ],
