Added an outline describing the desired schedule.

--- a/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
@@ -38,7 +38,8 @@
     "        1. [Step 2.2.i](#step2bi): interface.ccl\n",
     "        1. [Step 2.2.ii](#step2bii): param.ccl\n",
     "        1. [Step 2.2.iii](#step2biii): schedule.ccl\n",
-    "    1. [Step 2.3](#step2c): Add the C file to Einstein Toolkit compilation list."
+    "    1. [Step 2.3](#step2c): Add the C file to Einstein Toolkit compilation list.\n",
+    "    "
    ]
   },
   {
@@ -394,9 +395,9 @@
     "Also, we will write the logic that determines which files are called where in order to calculate $B^i$ here. \n",
     "\n",
     "1. Take the primary finite differencing order $N$ from the param.ccl file. Fill in the interior points with the corresponding FD order. \n",
-    "1. Then, for each face, at $0+{\\rm cctk_nghostzones[face]}-1$ and ${\\rm cctk_lsh[face]}-{\\rm cctk_nghostzones[face]}+1$, calculate $B^i$ at order $N-2$\n",
-    "1. Continue moving outwards: at the points $0+{\\rm cctk_nghostzones[face]}-p$ and ${\\rm cctk_lsh[face]}-{\\rm cctk_nghostzones[face]}+p$, calculate B at order $N-2p$.\n",
-    "1. When ${\\rm cctk_nghostzones[face]}-p = 0$, use the upwinding and downwinding derivatives for the appropriate face.\n"
+    "1. Then, for each face, at $0+{\\rm cctk\\_nghostzones[face]}-1$ and ${\\rm cctk\\_lsh[face]}-{\\rm cctk\\_nghostzones[face]}+1$, calculate $B^i$ at order $N-2$\n",
+    "1. Continue moving outwards: at the points $0+{\\rm cctk\\_nghostzones[face]}-p$ and ${\\rm cctk\\_lsh[face]}-{\\rm cctk\\_nghostzones[face]}+p$, calculate B at order $N-2p$.\n",
+    "1. When ${\\rm cctk\\_nghostzones[face]}-p = 0$, use the upwinding and downwinding derivatives for the appropriate face.\n"
    ]
   },
   {
@@ -1568,9 +1569,33 @@
     "$$\\label{step2biii}$$\n",
     "\n",
     "\\[Back to [top](#top)\\]\n",
+    "\n",
     "3. $\\text{schedule.ccl}$: allocates storage for gridfunctions, defines how the thorn's functions should be scheduled in a broader simulation, and specifies the regions of memory written to or read from gridfunctions. $\\text{schedule.ccl}$'s official documentation may be found [here](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-268000C2.4). \n",
     "\n",
-    "We first assign storage for both scalar gridfunctions, and then specify the standardized ETK \"scheduling bins\" in which we want each of our thorn's functions to run."
+    "For clarity, we will outline the desired schedule we wish to create in the toolkit:\n",
+    "\n",
+    "0. **GiRaFFEfood_HO**\n",
+    "    1. **GiRaFFE_ExactWaldID**\n",
+    "        1. Sets up the vector potential and initial Valencia 3-velocity.\n",
+    "    1. **driver_A_to_B**\n",
+    "        1. Computes the magnetic field from the vector potential everywhere (this function is from **GiRaFFE_HO**).\n",
+    "    1. **StildeD_from_initial_data**\n",
+    "        1. Computes the initial Poynting flux from the initial magnetic field and Valencia 3-velocity data.\n",
+    "0. **GiRaFFE_HO**\n",
+    "    1. **HydroBase_to_GiRaFFE**\n",
+    "        1. Reads data from **HydroBase** variables into **GiRaFFE_HO** variables.\n",
+    "    1. **GiRaFFE_HO_set_prereqs**\n",
+    "        1. Sets auxiliary gridfunctions that will need to be finite-differenced for the right-hand sides.\n",
+    "    1. **GiRaFFE_HO_set_rhs**\n",
+    "        1. Sets the RHSs for the ETK's MoL solver.\n",
+    "    1. **GiRaFFE_HO_SelectBCs**\n",
+    "        1. Apply boundary conditions. \n",
+    "    1. **driver_A_to_B**\n",
+    "        1. Computes the magnetic field from the vector potential everywhere.\n",
+    "    1. **GiRaFFE_to_HydroBase**\n",
+    "        1. Reads data from **GiRaFFE_HO** variables into **HydroBase** variables.\n",
+    "\n",
+    "We first assign storage for both scalar gridfunctions, and then specify the standardized ETK \"scheduling bins\" in which we want each of our thorn's functions to run.\n"
    ]
   },
   {
@@ -1847,7 +1872,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb to latex\n",
-      "[NbConvertApp] Writing 153483 bytes to Tutorial-ETK_thorn-GiRaFFE_Higher_Order.tex\n",
+      "[NbConvertApp] Writing 156090 bytes to Tutorial-ETK_thorn-GiRaFFE_Higher_Order.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
