--- a/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
@@ -1577,23 +1577,41 @@
     "0. **GiRaFFEfood_HO**\n",
     "    1. **GiRaFFE_ExactWaldID**\n",
     "        1. Sets up the vector potential and initial Valencia 3-velocity.\n",
+    "        1. Reads: gammaDD02, gammaDD12, gammaDD22 (Everywhere)\n",
+    "        1. Writes: AD0, AD1, AD2, ValenciavU0, ValenciavU1, ValenciavU2 (Everywhere)\n",
     "    1. **driver_A_to_B**\n",
     "        1. Computes the magnetic field from the vector potential everywhere (this function is from **GiRaFFE_HO**).\n",
+    "        1. Reads: gammaDD00, gammaDD01, gammaDD02, gammaDD11, gammaDD12, gammaDD22, AD0, AD1, AD2 (Everywhere)\n",
+    "        1. Writes: BU0, BU1, BU2 (Everywhere)\n",
     "    1. **StildeD_from_initial_data**\n",
     "        1. Computes the initial Poynting flux from the initial magnetic field and Valencia 3-velocity data.\n",
+    "        1. Reads: gammaDD00, gammaDD01, gammaDD02, gammaDD11, gammaDD12, gammaDD22, BU0, BU1, BU2, ValenciavU0, ValenciavU1, ValenciavU2 (Everywhere)\n",
+    "        1. Writes: StildeD0, StildeD1, StildeD0 (Interior)\n",
     "0. **GiRaFFE_HO**\n",
     "    1. **HydroBase_to_GiRaFFE**\n",
     "        1. Reads data from **HydroBase** variables into **GiRaFFE_HO** variables.\n",
+    "        1. Reads: Avec, Bvec, vel (from HydroBase) (Everywhere)\n",
+    "        1. Writes: AD0, AD1, AD2, BU0, BU1, BU2, ValenciavU0, ValenciavU1, ValenciavU2 (Everywhere)\n",
     "    1. **GiRaFFE_HO_set_prereqs**\n",
     "        1. Sets auxiliary gridfunctions that will need to be finite-differenced for the right-hand sides.\n",
+    "        1. Reads: alpha, betaU0, betaU1, betaU2, gammaDD00, gammaDD01, gammaDD02, gammaDD11, gammaDD12, gammaDD22, ValenciavU0, ValenciavU1, ValenciavU2, AD0, AD1, AD2, psi6Phi (Everywhere)\n",
+    "        1. Writes: uU0, uU1, uU2, alphau0, alpsqrtgam, AevolParen, PevolParenU0, PevolParenU1, PevolParenU2, gammaUU00, gammaUU01, gammaUU02, gammaUU11, gammaUU12, gammaUU22, gammadet, u4upper0 (Everywhere)\n",
     "    1. **GiRaFFE_HO_set_rhs**\n",
     "        1. Sets the RHSs for the ETK's MoL solver.\n",
+    "        1. Reads: alpha, betaU0, betaU1, betaU2, gammaDD00, gammaDD01, gammaDD02, gammaDD11, gammaDD12, gammaDD22, ValenciavU0, ValenciavU1, ValenciavU2, AD0, AD1, AD2, BU0, BU1, BU2, uU0, uU1, uU2, alphau0, alpsqrtgam, AevolParen, PevolParenU0, PevolParenU1, PevolParenU2, gammaUU00, gammaUU01, gammaUU02, gammaUU11, gammaUU12, gammaUU22, gammadet (Everywhere)\n",
+    "        1. Writes: Stilde_rhsD0, Stilde_rhsD1, Stilde_rhsD2, A_rhsD0, A_rhsD1, A_rhsD2, psi6Phi_rhs (Interior)\n",
     "    1. **GiRaFFE_HO_SelectBCs**\n",
     "        1. Apply boundary conditions. \n",
+    "        1. Reads: StildeD0, StildeD1, StildeD2, AD0, AD1, AD2, psi6Phi (Interior)\n",
+    "        1. Writes: StildeD0, StildeD1, StildeD2, AD0, AD1, AD2, psi6Phi (Boundaries)\n",
     "    1. **driver_A_to_B**\n",
     "        1. Computes the magnetic field from the vector potential everywhere.\n",
+    "        1. Reads: gammaDD00, gammaDD01, gammaDD02, gammaDD11, gammaDD12, gammaDD22, AD0, AD1, AD2 (Everywhere)\n",
+    "        1. Writes:BU0, BU1, BU2 (Everywhere)\n",
     "    1. **GiRaFFE_to_HydroBase**\n",
     "        1. Reads data from **GiRaFFE_HO** variables into **HydroBase** variables.\n",
+    "        1. Reads: AD0, AD1, AD2, BU0, BU1, BU2, ValenciavU0, ValenciavU1, ValenciavU2 (Everywhere)\n",
+    "        1. Writes: Avec, Bvec, vel (from HydroBase) (Everywhere)\n",
     "\n",
     "We first assign storage for both scalar gridfunctions, and then specify the standardized ETK \"scheduling bins\" in which we want each of our thorn's functions to run.\n"
    ]
